--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div id="breads">
         <h2> Our breads</h2>
-        <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\breads_1.jpg" width="440px"height="450px">
+        <img src="breads_1.jpg" width="440px"height="450px">
         <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\breads_2.jpg"width="440px"height="450px">
          <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\breads_3.jpg"width="440px"height="450px" align="right">
          <table width="100%">
