--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <hr>
   <div id="home">
     <h2> Our home</h2>
-    <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\main_1.jpg" width="650px"height="450px">
-    <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\burger4.jpg"width="650px"height="450px" align="right">
+    <img src="main_1.jpg" width="650px"height="450px">
+    <img src="burger4.jpg"width="650px"height="450px" align="right">
     <table width="100%">
        <tr>
          <th>main_1</th>
@@ -44,8 +44,8 @@
     </div>
     <div id="main">
       <h2> Our main</h2>
-      <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\main_1.jpg" width="650px"height="450px">
-      <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\main_2.jpg"width="650px"height="450px" align="right">
+      <img src="main_1.jpg" width="650px"height="450px">
+      <img src="main_2.jpg"width="650px"height="450px" align="right">
       <table width="100%">
          <tr>
            <th>main_1</th>
@@ -57,8 +57,8 @@
       <div id="breads">
         <h2> Our breads</h2>
         <img src="breads_1.jpg" width="440px"height="450px">
-        <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\breads_2.jpg"width="440px"height="450px">
-         <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\breads_3.jpg"width="440px"height="450px" align="right">
+        <img src="breads_2.jpg"width="440px"height="450px">
+         <img src="breads_3.jpg"width="440px"height="450px" align="right">
          <table width="100%">
             <tr>
               <th>breads_1</th>
@@ -71,7 +71,7 @@
         <div id="burger">
           <h2> Our burger</h2>
 
-          <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\burger4.jpg"width="100%"height="450px" align="right">
+          <img src="burger4.jpg"width="100%"height="450px" align="right">
           <table width="100%">
              <tr>
                <th>burger</th>
@@ -83,10 +83,10 @@
           <br>
           <div id="desert">
             <h2> Our desert</h2>
-            <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\desert_1.jpg" width="325px"height="450px">
-            <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\desert_2.jpg"width="325px"height="450px" >
-            <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\desert_3.jpg"width="325px"height="450px" >
-            <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\desert_4.jpg"width="325px"height="450px" align="right">
+            <img src="desert_1.jpg" width="325px"height="450px">
+            <img src="desert_2.jpg"width="325px"height="450px" >
+            <img src="desert_3.jpg"width="325px"height="450px" >
+            <img src="desert_4.jpg"width="325px"height="450px" align="right">
             <table width="100%">
                <tr>
                  <th>desert_1</th>
@@ -100,10 +100,10 @@
             </div>
             <div id="fried">
               <h2> Our fried</h2>
-              <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\fried_1.jpg" width="325px"height="450px">
-              <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\fried_2.jpg"width="325px"height="450px" align="right">
-              <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\fried_3.jpg" width="325px"height="450px">
-              <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\fried_4.jpg" width="325px"height="450px">
+              <img src="fried_1.jpg" width="325px"height="450px">
+              <img src="fried_2.jpg"width="325px"height="450px" align="right">
+              <img src="fried_3.jpg" width="325px"height="450px">
+              <img src="fried_4.jpg" width="325px"height="450px">
               <table width="100%">
                  <tr>
                    <th>fried_1</th>
@@ -118,10 +118,10 @@
               </div>
               <div id="green">
                 <h2>Our green</h2>
-                <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\green_1.jpg" width="325px"height="450px">
-                <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\green2.jpg"width="325px"height="450px" align="right">
-                <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\green3.jpg" width="325px"height="450px">
-                <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\green4.jpg" width="325px"height="450px">
+                <img src="green_1.jpg" width="325px"height="450px">
+                <img src="green2.jpg"width="325px"height="450px" align="right">
+                <img src="green3.jpg" width="325px"height="450px">
+                <img src="green4.jpg" width="325px"height="450px">
                 <table width="100%">
                    <tr>
                      <th>green_1</th>
@@ -134,10 +134,10 @@
                </div>
                 <div id="other">
                   <h2>Our other</h2>
-                  <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\other_1.jpg" width="325px"height="450px">
-                  <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\other_2.jpg"width="325px"height="450px" align="right">
-                  <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\other_3.jpg" width="325px"height="450px">
-                  <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\other_4.jpg" width="325px"height="450px">
+                  <img src="other_1.jpg" width="325px"height="450px">
+                  <img src="other_2.jpg"width="325px"height="450px" align="right">
+                  <img src="other_3.jpg" width="325px"height="450px">
+                  <img src="other_4.jpg" width="325px"height="450px">
                   <table width="100%">
                      <tr>
                        <th>other_1</th>
