--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <h2> Our home</h2>
       <article>
-    <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\main_1.jpg" width="300px"height="450px">
-    <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\burger4.jpg"width="300px"height="450px">
+    <img src="main_1.jpg" width="300px"height="450px">
+    <img src="burger4.jpg"width="300px"height="450px">
     <table width="100%">
        <tr>
          <th>main_1</th>
@@ -57,8 +57,8 @@
 
   <!--  <div id="main">
       <h2> Our main</h2>
-      <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\main_1.jpg" width="650px"height="450px">
-      <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\main_2.jpg"width="650px"height="450px" align="right">
+      <img src="main_1.jpg" width="650px"height="450px">
+      <img src="main_2.jpg"width="650px"height="450px" align="right">
       <table width="100%">
          <tr>
            <th>main_1</th>
@@ -70,9 +70,9 @@
 
         <h2> Our breads</h2>
           <article>
-        <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\breads_1.jpg" width="300px"height="450px">
-        <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\breads_2.jpg"width="300px"height="450px">
-         <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\breads_3.jpg"width="300px"height="450px" >
+        <img src="breads_1.jpg" width="300px"height="450px">
+        <img src="breads_2.jpg"width="300px"height="450px">
+         <img src="breads_3.jpg"width="300px"height="450px" >
          <table width="100%">
             <tr>
               <th>breads_1</th>
@@ -86,7 +86,7 @@
 
           <h2> Our burger</h2>
   <article>
-          <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\burger4.jpg"width="300px"height="450px">
+          <img src="burger4.jpg"width="300px"height="450px">
           <table width="100%">
              <tr>
                <th>burger</th>
@@ -100,10 +100,10 @@
 
             <h2> Our desert</h2>
               <article>
-            <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\desert_1.jpg" width="300px"height="450px">
-            <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\desert_2.jpg"width="300px"height="450px" >
-            <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\desert_3.jpg"width="300px"height="450px" >
-            <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\desert_4.jpg"width="300px"height="450px">
+            <img src="desert_1.jpg" width="300px"height="450px">
+            <img src="desert_2.jpg"width="300px"height="450px" >
+            <img src="desert_3.jpg"width="300px"height="450px" >
+            <img src="desert_4.jpg"width="300px"height="450px">
             <table width="100%">
                <tr>
                  <th>desert_1</th>
@@ -118,10 +118,10 @@
 
               <h2> Our fried</h2>
                 <article>
-              <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\fried_1.jpg" width="300px"height="450px">
-              <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\fried_2.jpg"width="300px"height="450px" >
-              <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\fried_3.jpg" width="300px"height="450px">
-              <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\fried_4.jpg" width="300px"height="450px">
+              <img src="fried_1.jpg" width="300px"height="450px">
+              <img src="fried_2.jpg"width="300px"height="450px" >
+              <img src="fried_3.jpg" width="300px"height="450px">
+              <img src="fried_4.jpg" width="300px"height="450px">
               <table width="100%">
                  <tr>
                    <th>fried_1</th>
@@ -135,10 +135,10 @@
 
                 <h2>Our green</h2>
                   <article>
-                <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\green_1.jpg" width="300px"height="450px">
-                <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\green2.jpg"width="300px"height="450px" >
-                <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\green3.jpg" width="300px"height="450px">
-                <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\green4.jpg" width="300px"height="450px">
+                <img src="green_1.jpg" width="300px"height="450px">
+                <img src="green2.jpg"width="300px"height="450px" >
+                <img src="green3.jpg" width="300px"height="450px">
+                <img src="green4.jpg" width="300px"height="450px">
                 <table width="100%">
                    <tr>
                      <th>green_1</th>
@@ -153,10 +153,10 @@
 
                   <h2>Our other</h2>
                     <article>
-                  <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\other_1.jpg" width="300px"height="450px">
-                  <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\other_2.jpg"width="300px"height="450px" >
-                  <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\other_3.jpg" width="300px"height="450px">
-                  <img src="D:\New folder\Copy of HTML_Starter_Files\13_Food_Website\img\other_4.jpg" width="300px"height="450px">
+                  <img src="other_1.jpg" width="300px"height="450px">
+                  <img src="other_2.jpg"width="300px"height="450px" >
+                  <img src="other_3.jpg" width="300px"height="450px">
+                  <img src="other_4.jpg" width="300px"height="450px">
                   <table width="100%">
                      <tr>
                        <th>other_1</th>
